tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_ResolveTypeName_Null.bsl

EVIL_PROVIDER_ResolveTypeName_Null.fsx(7,69,7,92): typecheck error FS0039: The type 'SomeNameThatDoesntExist' is not defined in 'FSharp.EvilProviderWhereResolveTypeNameReturnsNull'.

EVIL_PROVIDER_ResolveTypeName_Null.fsx(7,69,7,92): typecheck error FS0039: The type 'SomeNameThatDoesntExist' is not defined in 'FSharp.EvilProviderWhereResolveTypeNameReturnsNull'.
